# clock

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  build.ps1  build.sh
.github/workflows/: build-all-platforms.yml
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: main.rs
