[package]
name = "clock"
authors = ["R4ZXRN3T"]
version = "1.0.0"
license = "GPL-3"
description = "A simple cli tool, providing a timer and a stopwatch."
repository = "https://github.com/R4ZXRN3T/clock"
readme = "README.md"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
crossterm = "0.29.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"